--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "keywords": [],
   "dependencies": {
+    "classnames": "^2.2.5",
     "lodash": "^4.14.2",
     "lodash.defaultsdeep": "^4.6.0",
     "mapbox-gl": "^0.28.0",
